syntax ="proto3";

package mypackage;

option go_package = "/pb";

message LoginRequest{
    string username=1;
    string password=2;
}

message LoginReponse{
    string access_token=1;
}

service AuthService{
    rpc Login(LoginRequest) returns (LoginReponse){};
}